# RAG_Test

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
DOC/: software_engineering_knowledge.txt
Homework/: homework1_sdlc_agile.txt  homework2_design_patterns.txt
app/: config.py  embeddings.py  evaluation.py  main.py  models.py  rag_pipeline.py  text_extraction.py  vector_store.py
app/routers/: documents.py  grading.py  query.py
frontend/: package-lock.json  package.json
frontend/src/: proxy.js
frontend/src/app/: layout.js  page.js
frontend/src/app/api/approve/: route.js
frontend/src/app/api/auth/signup/: route.js
frontend/src/app/api/enroll/: route.js
frontend/src/app/api/grade/: route.js
frontend/src/app/api/ingest/: route.js
frontend/src/app/api/submit/: route.js
frontend/src/app/login/: page.js
frontend/src/app/student/: page.js
frontend/src/app/teacher/: page.js
frontend/src/app/teacher/assignments/[assignmentId]/: page.js
frontend/src/app/teacher/courses/[courseId]/: page.js
frontend/src/lib/: rag.js
frontend/src/lib/supabase/: server.js  service.js
sample_data/: english_rag_guide.txt  rag_eval_dataset.jsonl  rag_test_service_handbook.txt  thai_ai_knowledge.txt
supabase/: README.md
supabase/migrations/: 0001_initial_grading_schema.sql  0002_add_md5_hash_to_knowledge_documents.sql
