[project]
name = "rag-demo"
version = "0.1.0"
description = "RAG Demo with FastAPI + Qdrant — Thai & English"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",
    "qdrant-client==1.9.1",
    "sentence-transformers==2.7.0",
    "groq==0.26.0",
    "python-dotenv==1.0.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "httpx==0.27.0",
]

[tool.uv]
package = false
